use of interpolation and upperCase

--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>Hello my name is naved ali khan</h1>
 <h2> {{ title }}  </h2>
-<h2> {{ name }}  </h2>
+<h2> {{ name }} </h2>
 <h1>{{2+2}}</h1>
 <h1>{{x+y}}</h1>
+<h1>{{'hello'.toUpperCase()}}</h1>
