--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -1,6 +1,14 @@
-<h1>Hello my name is naved ali khan</h1>
-<h2> {{ title }}  </h2>
-<h2> {{ name }} </h2>
-<h1>{{2+2}}</h1>
-<h1>{{x+y}}</h1>
-<h1>{{'hello'.toUpperCase()}}</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>ROOT COMPONENT</h1>
+    <h1>{{name}}</h1>
+    <login/>
+    <signup/>
+</body>
+</html>
