learn to make a custom component

--- a/lec-1/src/app/profile/profile.component.html
+++ b/lec-1/src/app/profile/profile.component.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ROOT COMPONENT</h1>
-    <login/>
-    <signup/>
-    <profile/>
+    <h1>Hi i am Custom  Component</h1>
 </body>
 </html>
