--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>ROOT COMPONENT</h1>
+    <button (click)="handleClickEvent()" >Click Me </button>
     <login/>
     <signup/>
     <profile/>
+    
 </body>
 </html>
