--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>ROOT COMPONENT</h1>
-    
     <login/>
     <signup/>
     <profile/>
-    <h1 class="text-center" >Counter App  {{count}} </h1>
-    <button (click)="handleReset()" >Reset</button>
-    <button (click)="handleIncreement()" >Increement</button>
-    <button (click)="handleDecreement()" >Decreement</button>
+    <h1>Event in Angular</h1>
+    <button (click)="handleEvent($event)">Click Event</button>
+    <div (mouseenter)="MouseEvent($event)" style="background-color: green; width: 50px; height: 50px;  "></div>
+    <input type="text" (input)="inputEvent($event)"  >
+
 </body>
 </html>
