--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -12,42 +12,21 @@
     <!-- <login /> -->
     <!-- <signup /> -->
     <!-- <profile /> -->
-    <h1> Else  If | Control Flow In Angular </h1>
-    <button (click)="handleColor('red')" >Red</button>
-    <button (click)="handleColor('green')" >Green</button>
-    <button (click)="handleColor('yellow')" >yellow</button>
-    <button (click)="handleColor('blue')" >Blue</button>
-    <button (click)="handleColor('magenta')" >Magenta</button>
-    <button (click)="handleColor('lime')" >Lime</button>
-    <button (click)="handleColor('jvl')" >Xyz color</button>
-    <input type="text" placeholder="enter color" (input)="changeColor($event)" >
-    
-    @switch(color){
-        @case('red'){
-            <h1 style="background-color: red;">Red Color</h1>
-        }
-        @case('green'){
-            <h1 style="background-color: green;">green Color</h1>
-        }
-        @case('blue'){
-            <h1 style="background-color: blue;">blue Color</h1>
-        }
-        @case('yellow'){
-            <h1 style="background-color: yellow;">yellow Color</h1>
-        }
-        @case('magenta'){
-            <h1 style="background-color: magenta;">Magenta Color</h1>
-        }
-        @case('lime'){
-            <h1 style="background-color: lime;">lime Color</h1>
-        }
-        @default{
-            <h1 style="background-color: black;">No color Match</h1>
-        }
+     
+    @for(hero of heros; track hero){
+        <h2>{{hero}}</h2>
     }
 
+    @for(student of students; track student;let id=$index){
+        <h2>
+            <span>{{id+1}}</span>&nbsp;
+            <span>{{student.name}}</span>&nbsp;
+            <span>{{student.age}}</span>&nbsp;
+            <span>{{student.email}}</span>&nbsp;
+            <button (click)="getName(student.name)" style="padding: 10px;">Get Name</button>
+        </h2>
+    }
 
-    
 </body>
 
 </html>
