data type of signal and method to update

--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -13,9 +13,8 @@
     <!-- <signup /> -->
     <!-- <profile /> -->
      
-    <h1>{{count()}}</h1>
-    <h1>{{x}}</h1>
-    <button (click)="updateValue()">Increase</button>
+    <h1>{{data()}}</h1>
+    <button (click)="updateSignal()">Increase</button>
 
 </body>
 
