--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,33 +9,12 @@
 
 <body>
     <h1>ROOT COMPONENT</h1>
-    <!-- <login /> -->
-    <!-- <signup /> -->
-    <!-- <profile /> -->
+  <h1>Two Way Binding</h1>
+
+  <input [(ngModel)]="name" type="text">
+  <h1>{{name}}</h1>
 
 
-  <h1>For loop contextual Variable</h1>
-
-  @for(user of users ; track user; ; let id = $index){
-
-    <!-- @if($first || $last){
-        <h2 style="background-color: red;" >this is {{id+1}} user and the name is {{user}}</h2>
-    }
-    @else{
-        <h2>this is {{id+1}} user and the name is {{user}}</h2>
-    } -->
-    @if($even){
-        <h2 style="background-color: lime;">this is {{id+1}} user and the name is {{user}}</h2>
-    }
-    @if($odd){
-        <h2 style="background-color: green;">this is {{id+1}} user and the name is {{user}}</h2>
-    }
-     {{$count}}  <!-- total count dikhaega -->
-  }
-
-  @empty(){
-    <h1>No Record found</h1>
-  }
 
 </body>
 
