--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -11,15 +11,24 @@
     <h1>ROOT COMPONENT</h1>
     <h1>TO DO LIST</h1>
 
-    <input type="text" [(ngModel)]="task" style="height: 25px">
-    <button (click)="addTask()" style="padding: 10px; width: 80px; margin-left: 10px; ">Add</button>
+    <input type="text" [(ngModel)]="task" placeholder="enter the task" style="width: 200px; height: 28px;">
 
+    <button (click)="addTask()"
+        style="padding: 15px;background-color: beige  ;width: 80px; margin-left: 5%;">Add</button>
+
+    <br>
     <ol>
-        @for(task of taskList; track task){
-        <li>{{task.task}} <span><button (click)="removeTask(task.id)" >Delete</button></span> </li>
+        @for(task of taskList; track task ; let id = $index){
+        <li>{{task.task}} <span><button (click)="deleteTask(task.id)" >Delete</button></span></li>
         }
-
     </ol>
+
+
+
+
+
+
+
 
 
 
