--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -8,31 +8,11 @@
 </head>
 
 <body>
-    <h1>ROOT COMPONENT</h1>
-    <h1>TO DO LIST</h1>
+    <h1   [style.backgroundColor]="bgColor"  >ROOT COMPONENT</h1>
+    <h2   [style.backgroundColor]="todo ? todoTrue : todoFalse " >TO DO LIST</h2>
+    <h2   [style.fontSize.pt]="size" >TO DO LIST 2 </h2>
 
-    <input type="text" [(ngModel)]="task" placeholder="enter the task" style="width: 200px; height: 28px;">
-
-    <button (click)="addTask()"
-        style="padding: 15px;background-color: beige  ;width: 80px; margin-left: 5%;">Add</button>
-
-    <br>
-    <ol>
-        @for(task of taskList; track task ; let id = $index){
-        <li>{{task.task}} <span><button (click)="deleteTask(task.id)" >Delete</button></span></li>
-        }
-    </ol>
-
-
-
-
-
-
-
-
-
-
-
+    <button (click)="updateColor()" >Update Color</button>
 
 </body>
 
