--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,7 +9,12 @@
 
 <body>
     <h1 *ngIf="show" >Heading One 1 </h1>
-    <h1 >Heading 2  </h1>
+    <h1 *ngFor="let student of students" >{{student}}  </h1>
+    <h2 *ngFor="let student of studentsData" >
+        {{student.name}}
+        {{student.age}}
+        {{student.email}}
+    </h2>
 
 </body>
 
