--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -8,13 +8,16 @@
 </head>
 
 <body>
-    <h1 *ngIf="show" >Heading One 1 </h1>
-    <h1 *ngFor="let student of students" >{{student}}  </h1>
-    <h2 *ngFor="let student of studentsData" >
-        {{student.name}}
-        {{student.age}}
-        {{student.email}}
-    </h2>
+
+    <div *ngIf="login; else  elseblock">
+        <a href="">Login</a>
+    </div>
+    <ng-template #elseblock>
+        <a href="">Logout</a>
+    </ng-template>
+
+    <button (click)="update()" >Update</button>
+
 
 </body>
 
