--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -8,16 +8,21 @@
 </head>
 
 <body>
+    <div [ngSwitch]="color" >
+        <h1 *ngSwitchCase="'red'" style="background-color:red ;">Red</h1>
+        <h1 *ngSwitchCase="'green'" style="background-color: green;">Green</h1>
+        <h1 *ngSwitchCase="'blue'" style="background-color:blue ;">Blue</h1>
+        <h1 *ngSwitchCase="'yellow'" style="background-color:yellow ;">yellow</h1>
+        <h1 *ngSwitchCase="'pink'" style="background-color:pink ;">Pink</h1>
+        <h1 *ngSwitchDefault >No Color Match</h1>
 
-    <div *ngIf="login; else  elseblock">
-        <a href="">Login</a>
     </div>
-    <ng-template #elseblock>
-        <a href="">Logout</a>
-    </ng-template>
 
-    <button (click)="update()" >Update</button>
-
+    <button (click)="changeColor('red')" >red</button>
+    <button (click)="changeColor('green')">Green</button>
+    <button (click)="changeColor('blue')">Blue</button>
+    <button (click)="changeColor('yellow')">Yellow</button>
+    <button (click)="changeColor('pink')">Pink</button>
 
 </body>
 
