--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li><a routerLink="/login" >Login</a></li>
+        <li><a routerLink="/about" >about</a></li>
+        <li><a routerLink="/contact" >contact</a></li>
+        <li><a routerLink="/profile" >profile</a></li>
+    </ul>
+    <router-outlet /> 
 </body>
 
 </html>
