--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <ul>
-        <li><a routerLink="/login" >Login</a></li>
-        <li><a routerLink="/about" >about</a></li>
-        <li><a routerLink="/contact" >contact</a></li>
-        <li><a routerLink="/profile" >profile</a></li>
-    </ul>
-    <router-outlet /> 
+    <h1>Basic Routing</h1>
+    <app-header></app-header>
+    
+    <router-outlet />
+    
+    
 </body>
 
 </html>
