--- a/lec-1/src/app/header/header.component.html
+++ b/lec-1/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div>
-        <a routerLinkActive="active" routerLink="/">
+        <a routerLink="/">
             <h2>Logo</h2>
         </a>
     </div>
@@ -8,7 +8,6 @@
         <a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/">
             <h2>Home</h2>
         </a>
-        
         <a routerLinkActive="active" routerLink="/profile">
             <h2>Profile</h2>
         </a>
