data pass from one component from another using routerLinnk

--- a/lec-1/src/app/profile/profile.component.html
+++ b/lec-1/src/app/profile/profile.component.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi i am Profile </h1>
+    <h1>Hi i am Profile {{userName}}  </h1>
 </body>
 </html>
