data transfer between one component to another using button

--- a/lec-1/src/app/home/home.component.html
+++ b/lec-1/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <h1>I am Home Page</h1>
-<a [routerLink]="['profile',{name:'Naved Ali Khan'}]" >Go to Profile Page</a>
+<!-- <a [routerLink]="['profile',{name:'Naved Ali Khan'}]" >Go to Profile Page</a> -->
+<button (click)="goToProfile()" >Go to Profile Page</button>
