--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,11 +9,12 @@
 
 <body>
     <h1>Basic Routing</h1>
-    <app-header></app-header>
-    
-    <router-outlet />
-    
-    
+    <ul>
+        @for(user of users; track user.id){
+            <li><a routerLink="/user/{{user.id}}/{{user.name}}">{{user.name}}</a></li>
+        }
+    </ul>
+    <router-outlet />  
 </body>
 
 </html>
