--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,15 +9,19 @@
 
 <body>
     <h1>Reactive Forms</h1>
-    <form method="post">
-        <input type="text" placeholder="enter name" [formControl]="name" >
+    <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+        <input type="text" placeholder=" enter the name " formControlName="name" >
         <br><br>
-        <input type="text" placeholder="enter password" [formControl]="password" >
+        <input type="password" placeholder=" enter the name " formControlName="password" >
         <br><br>
-        <button type="button" (click)="displayValue()" >Login</button>
-        <h3>{{name.value}}</h3>
-        <h3>{{password.value}}</h3>
-    </form> 
+        <input type="text" placeholder="enter the email" formControlName="email" >
+        <br><br>
+        <button>Submit</button>
+        <button type="button" (click)="setValue()" >Set Value</button>
+    </form>
+    <h1>{{this.profileForm.value.name}}</h1>
+    <h1>{{this.profileForm.value.password}}</h1>
+    <h1>{{this.profileForm.value.email}}</h1>
 </body>
 
 </html>
