--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -11,17 +11,19 @@
     <h1>Reactive Forms</h1>
     <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
         <input type="text" placeholder=" enter the name " formControlName="name" >
+        <span class="error" *ngIf="name?.hasError('required')">Name is Required . </span> &nbsp;
+        <span class="error" *ngIf="name?.invalid && (name?.dirty || name?.touched)">Please Enter UserName</span>
         <br><br>
-        <input type="password" placeholder=" enter the name " formControlName="password" >
+        <input type="password" placeholder="enter the password" formControlName="password" >
+        <span class="error" *ngIf="password?.hasError('required')" >Password is Required .</span> &nbsp;
+        <span class="error" *ngIf="password?.invalid" > Password must be 8 characters or long </span>
         <br><br>
         <input type="text" placeholder="enter the email" formControlName="email" >
+        <span class="error" *ngIf="email?.hasError('required')" > Please Enter the Email </span>
+        <span class="error" *ngIf="email?.invalid" > Email is invalid </span>
         <br><br>
-        <button>Submit</button>
-        <button type="button" (click)="setValue()" >Set Value</button>
+        <button (click)="onSubmit()" >Submit</button>
     </form>
-    <h1>{{this.profileForm.value.name}}</h1>
-    <h1>{{this.profileForm.value.password}}</h1>
-    <h1>{{this.profileForm.value.email}}</h1>
 </body>
 
 </html>
