resusablitiy of component

--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pass data to Child Component</h1>
-   <app-user [user]="userName"></app-user>
+    <h1>Reuse component</h1>
+    @for(user of users; track user){
+        <div>
+            <app-user  [user]="user" ></app-user>
+        </div>
+    }
+    
 </body>
 
 </html>
