--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Reuse component</h1>
-    @for(user of users; track user){
-        <div>
-            <app-user  [user]="user" ></app-user>
-        </div>
-    }
-    
+    <h1>App component</h1>
+   
+
+
 </body>
 
 </html>
