--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -8,10 +8,20 @@
 </head>
 
 <body>
-    <h1>App component</h1>
+    <h1>Pipes in Angular</h1>
+    <h1>{{tittle | uppercase}}</h1>
+    <h1>{{tittle2 | lowercase}}</h1>
+    <h1>{{tittle3 | titlecase}}</h1>
+
+    <h2>{{date | date}}</h2>
+    <h2>{{date | date:'fullDate'}}</h2>
+    <h2>{{date | date:'hh:mm:ss'}}</h2>
+
+    <h2>{{amount | currency }}</h2>
+    <h2>{{amount | currency:'INR'}}</h2>
+    <h2>{{amount | currency:'EUR'}}</h2>
+
    
-
-
 </body>
 
 </html>
