--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,17 +9,9 @@
 
 <body>
     <h1>Pipes in Angular</h1>
-    <h1>{{tittle | uppercase}}</h1>
-    <h1>{{tittle2 | lowercase}}</h1>
-    <h1>{{tittle3 | titlecase}}</h1>
 
-    <h2>{{date | date}}</h2>
-    <h2>{{date | date:'fullDate'}}</h2>
-    <h2>{{date | date:'hh:mm:ss'}}</h2>
 
-    <h2>{{amount | currency }}</h2>
-    <h2>{{amount | currency:'INR'}}</h2>
-    <h2>{{amount | currency:'EUR'}}</h2>
+    <h3>{{amount | currencyConvertor }}</h3>
 
    
 </body>
