--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -9,12 +9,13 @@
 
 <body>
     <h1>App Component</h1>
-    <h2>{{ counter }}</h2>
-    <button (click)="updateCounter()">Increement </button>
-
-    @if ( counter != 5){
-        <app-user [counter]="counter" ></app-user>
+    <button (click)="getProductData()">Get the Product Data</button>
+    @for(data of productData; track data){
+    <p>{{data.name}}</p>
     }
+    <app-user></app-user>
+
+
 
 </body>
 
