--- a/lec-1/src/app/app.component.html
+++ b/lec-1/src/app/app.component.html
@@ -16,7 +16,7 @@
             <li><b>Price:</b>{{product.price}}</li>
             <li><b>Cateogery:</b>{{product.category}}</li>
             <li><b>Rating:</b>{{product.rating}}</li>
-            <img src="{product.thumbnail}" alt="">
+            <img src="{{product.thumbnail}}" alt="">
         </ul>
     }
     <app-user></app-user>
