learn lazy loading

--- a/lec-2/src/app/app.component.html
+++ b/lec-2/src/app/app.component.html
@@ -7,5 +7,9 @@
 </head>
 <body>
   <h1 class="bg-red-300  font-bold text-xl text-white" >Angular + Tailwind</h1>
+
+  <a  routerLink="/user" >Go to Component Page</a>
+
+  <router-outlet></router-outlet>
 </body>
 </html>
